# honeyssh

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: fake_shell.rs  main.rs
